--- a/src/UserPage.form
+++ b/src/UserPage.form
@@ -77,10 +77,10 @@
               <Component id="accountComboBox" min="-2" pref="45" max="-2" attributes="0"/>
               <EmptySpace pref="127" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="logoutButton" pref="37" max="32767" attributes="0"/>
+                  <Component id="logoutButton" pref="55" max="32767" attributes="0"/>
                   <Component id="openAccount" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="171" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="153" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -134,6 +134,9 @@
         </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="1a" green="1a" red="1a" type="rgb"/>
+        </Property>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/icons/logout.png"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Logout"/>
         <Property name="toolTipText" type="java.lang.String" value="Logout from current session"/>
